--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,6 +14,7 @@
 
     {{ "<!-- combined, minified CSS -->" | safeHTML }}
     <link href="{{ .Site.BaseURL }}css/style.css" rel="stylesheet"{{ if not .Site.Params.disable_sri }} crossorigin="anonymous"{{ end }}>
+    <link href="{{ .Site.BaseURL }}css/custom.css" rel="stylesheet"{{ if not .Site.Params.disable_sri }} crossorigin="anonymous"{{ end }}>
 
     {{ if .RSSLink }}
     {{ "<!-- RSS 2.0 feed -->" | safeHTML }}
@@ -51,6 +52,11 @@
       <div class="container">
         <h1 class="blog-title"><a href="{{ .Site.BaseURL }}" rel="home">{{ .Site.Title | safeHTML }}</a></h1>
         {{ if .Site.Params.description }}<p class="lead blog-description">{{ .Site.Params.description | markdownify }}</p>{{ end }}
+          <div class="search-engine">
+            <h4>検索エンジンエリア</h4>
+            <input type="text">
+          </div>
+
       </div>
     </header>
     {{ end }}
